log
Fri 21 Mar 2025 03:03:22 AM UTC: 
 exercises.c | 44 ++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 40 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
3f6cb15
Fri 21 Mar 2025 03:03:25 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
d66bab6
Fri 21 Mar 2025 03:05:02 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  103 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:98:12: note: ‘Pilaaux’ was declared here
   98 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
131c082
Fri 21 Mar 2025 03:10:07 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  103 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:98:12: note: ‘Pilaaux’ was declared here
   98 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
77426cd
Fri 21 Mar 2025 02:23:05 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8c79cff
Fri 21 Mar 2025 02:33:44 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:18: error: ‘espacio’ may be used uninitialized [-Werror=maybe-uninitialized]
   49 |         *espacio = i;
      |         ~~~~~~~~~^~~
exercises.c:47:10: note: ‘espacio’ was declared here
   47 |     int* espacio;
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6854d5
Fri 21 Mar 2025 02:52:39 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
cf00a3d
Fri 21 Mar 2025 02:55:07 PM UTC: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
4e06b7f
Fri 21 Mar 2025 02:57:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:92:15: error: too few arguments to function ‘pushCurrent’
   92 |         aux = pushCurrent(Lista);
      |               ^~~~~~~~~~~
In file included from exercises.c:6:
arraylist.h:23:6: note: declared here
   23 | void pushCurrent(List *L, void *dato);
      |      ^~~~~~~~~~~
Compilation failed
df877f4
Fri 21 Mar 2025 02:58:26 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
c791cf7
Fri 21 Mar 2025 03:06:11 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:95:34: error: expected ‘;’ before ‘}’ token
   95 |         } else {aux = next(Lista)};
      |                                  ^
      |                                  ;
Compilation failed
8fd555b
